# Comm

./: .gitignore  CMakeLists.txt  README.md
cmake/: installConfig.cmake  packageConfigComponents.cmake.in  packageConfigSimple.cmake.in
comm/comm_data/: CoordinateData.py  DataCollection.py  ImageData.py
comm/comm_socket/: __init__.py  utils.py
comm/comm_utils/: NetworkData.py  Reference.py  utils.py
comm/communication/: Communication.py  Communicator.py
csharp/: Client.cs  CommunicatorApplication.cs  CoordinateGetter.cs  Program.cs
csharp/Comm/communication/: Communication.cs  Communicator.cs  TCPServer.cs
csharp/Comm/data/: BytesData.cs  CommunicationData.cs  CommunicatorState.cs  CoordinateData.cs  DataUtils.cs  ImageData.cs  MessageType.cs  Messages.cs  StatusData.cs
csharp/Comm/socket/: Socket.cs  SocketType.cs  Utils.cs
csharp/Comm/utils/: DebugUtils.cs  NetworkData.cs  Reference.cs  SerializationHeader.cs  Utils.cs
csharp/communication/: Communication.cs  Communicator.cs  TCPServer.cs
csharp/data/: BytesData.cs  CommunicationData.cs  CommunicatorState.cs  CoordinateData.cs  DataCollection.cs  DataUtils.cs  ImageData.cs  MessageType.cs  Messages.cs  StatusData.cs
csharp/socket/: Socket.cs  SocketPartner.cs  SocketType.cs  Utils.cs
csharp/utils/: Buffer.cs  NetworkData.cs  SerializationHeader.cs  Utils.cs
include/comm/communication/: Communication.h  Communicator.h  TCPServer.h
include/comm/data/: BytesData.h  CommunicationData.h  CommunicatorState.h  CoordinateData.h  DataCollection.h  DataCollectionWithOpenCV.h  ImageData.h  ImageDataWithOpenCV.h  ImageEncodeData.h  ImageEncodeDataWithOpenCV.h  MessageType.h  StatusData.h  dataUtils.h  dataUtilsWithOpenCV.h  messages.h
include/comm/socket/: Buffer.h  NetworkIncludes.h  Socket.h  SocketPartner.h  SocketType.h  utils.h
include/comm/utils/: Buffer.h  NetworkData.h  NetworkIncludes.h  SerializationHeader.h  utils.hpp
python/comm/: __init__.py
python/comm/comm_data/: BytesData.py  CommunicationData.py  CommunicatorState.py  CoordinateData.py  DataCollection.py  ImageData.py  ImageEncodeData.py  MessageType.py  Messages.py  StatusData.py  __init__.py  utils.py
python/comm/comm_socket/: Buffer.py  Socket.py  SocketPartner.py  __init__.py  network_includes.py  utils.py
python/comm/comm_utils/: Buffer.py  NetworkData.py  SerializationHeader.py  __init__.py  utils.py
python/comm/communication/: Communication.py  Communicator.py  TCPServer.py  __init__.py
python/comm/data/: CommunicationData.py  CommunicatorState.py  CoordinateData.py  DataCollection.py  ImageData.py  MessageType.py  StatusData.py  utils.py
python/comm/socket/: Buffer.py  Socket.py  SocketPartner.py  SocketType.py  utils.py
python/tests/: testEchoImage.py  testEchoUDP.py  testEndianness.py  testImageEncodeData.py  testSendAngles.py  testStrcmp.py  testUDPCommunication.py
src/communication/: Communication.cpp  Communicator.cpp  TCPServer.cpp
src/data/: BytesData.cpp  CommunicationData.cpp  CommunicatorState.cpp  CoordinateData.cpp  DataCollection.cpp  DataCollectionWithOpenCV.cpp  ImageData.cpp  ImageDataWithOpenCV.cpp  ImageEncodeData.cpp  ImageEncodeDataWithOpenCV.cpp  MessageType.cpp  StatusData.cpp  dataUtils.cpp  dataUtilsWithOpenCV.cpp  messages.cpp
src/socket/: Buffer.cpp  NetworkIncludes.cpp  Socket.cpp  SocketPartner.cpp  SocketType.cpp  utils.cpp
src/utils/: Buffer.cpp  NetworkData.cpp  NetworkIncludes.cpp  SerializationHeader.cpp
tests/: CMakeLists.txt  map_utils.hpp  string_utils.cpp  string_utils.h  testAppSendUDPImage.cpp  testBothCommunication.cpp  testCommunication.cpp  testDoubleUDPPortInstantiation.cpp  testEchoUDP.cpp  testEchoUDP.py  testEndianness.cpp  testImageEncodeData.cpp  testJsonUDP.cpp  testNormalSockets.cpp  testSendAngles.cpp  testSendImage.cpp  testSendImageUDP.cpp  testSendRecvRaw.cpp  testSerializationHeaderError.cpp  testSignals.cpp  testTCPClientUDPServer.cpp  testTCPServer.cpp  testTelemetry.cpp  testUDPCommunication.cpp  testUDPCommunication.py  testUploadPictureFile.cpp
